# astar-xvm-minimum

./: .editorconfig  .gitignore  Cargo.toml  Makefile.toml  README.md  deploy_sol.ts  hardhat.config.ts  package.json  rust-toolchain.toml  selectors.json  tsconfig.json
artifacts/contracts/Flipper.sol/: Flipper.dbg.json  Flipper.json
contracts/: Flipper.sol
contracts/xvm-call/: Cargo.toml  lib.rs
typechain-types/: Flipper.ts  hardhat.d.ts  index.ts
typechain-types/factories/: Flipper__factory.ts  index.ts
